--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       <img src="./assets/avatar.png" alt="Foto de Mariana">
       <p>@codewithmari</p>
     </div>
+
+    <div id="switch" onclick="toggleMode()">
+      <button></button>
+      <span></span>
+    </div>
+
     <ul>
       <li>
         <a href="https://maahbatistaa.github.io/portfolio/"><ion-icon name="folder-outline"></ion-icon>Portfólio</a>
@@ -45,6 +51,7 @@
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
