--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <ul>
       <li>
-        <a href="https://maahbatistaa.github.io/portfolio/"><ion-icon name="folder-outline"></ion-icon>Portfólio</a>
+        <a href="https://maahbatistaa-portfolio.vercel.app"><ion-icon name="folder-outline"></ion-icon>Portfólio</a>
       </li>
       <li>
         <a href="https://github.com/maahbatistaa"><ion-icon name="logo-github"></ion-icon>GitHub</a>
